config/prometheus-for-federation/ocp_monitoring/monitoring.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: kuadrant-multi-cluster-gateways
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: multicluster-gateway-controller-system
---
apiVersion: v1
kind: Service
metadata:
  name: istio-metrics-proxy
  namespace: kuadrant-multi-cluster-gateways
  labels:
    istio.io/gateway-name: prod-web
spec:
  selector:
    istio.io/gateway-name: prod-web
  ports:
  - name: metrics
    protocol: TCP
    port: 15020
    targetPort: 15020
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: exporter
    app.kubernetes.io/name: kube-state-metrics-stitch-poc
    app.kubernetes.io/part-of: stitchpoc
    app.kubernetes.io/version: 2.5.0
  name: kube-state-metrics-stitch-poc
  namespace: monitoring
spec:
  clusterIP: None
  ports:
  - name: https-main
    port: 8081
    targetPort: https-main
  - name: https-self
    port: 8082
    targetPort: https-self
  selector:
    app.kubernetes.io/component: exporter
    app.kubernetes.io/name: kube-state-metrics-stitch-poc
    app.kubernetes.io/part-of: stitchpoc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: exporter
    app.kubernetes.io/name: kube-state-metrics-stitch-poc
    app.kubernetes.io/part-of: stitchpoc
    app.kubernetes.io/version: 2.5.0
  name: kube-state-metrics-stitch-poc
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: exporter
      app.kubernetes.io/name: kube-state-metrics-stitch-poc
      app.kubernetes.io/part-of: stitchpoc
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: kube-state-metrics
      labels:
        app.kubernetes.io/component: exporter
        app.kubernetes.io/name: kube-state-metrics-stitch-poc
        app.kubernetes.io/part-of: stitchpoc
        app.kubernetes.io/version: 2.5.0
    spec:
      volumes:
      - name: custom-resource-state
        configMap:
          defaultMode: 420
          name: custom-resource-state
      automountServiceAccountToken: true
      containers:
      - volumeMounts:
        - name: custom-resource-state
          mountPath: /custom-resource-state
        args:
        - --port=8081
        - --telemetry-port=8082
        - --custom-resource-state-config-file
        - /custom-resource-state/custom-resource-state.yaml
        image: registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.9.2
        name: kube-state-metrics
        resources:
          limits:
            cpu: 100m
            memory: 250Mi
          requests:
            cpu: 10m
            memory: 190Mi
        securityContext: {}
        ports:
        - containerPort: 8081
          name: https-main
        - containerPort: 8082
          name: https-self
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: kube-state-metrics-stitch-poc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: grafana
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 8.5.5
  name: grafana
  namespace: monitoring
spec:
  ports:
  - name: http
    port: 3000
    targetPort: http
  selector:
    app.kubernetes.io/component: grafana
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: kube-prometheus
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: grafana
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 8.5.5
  name: grafana
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: grafana
      app.kubernetes.io/name: grafana
      app.kubernetes.io/part-of: kube-prometheus
  template:
    metadata:
      annotations:
        checksum/grafana-config: 4d376802c61554030cfd50d569dabda7
        checksum/grafana-dashboardproviders: 2d9c006bd11b55212fbb797fdc6d153b
        checksum/grafana-datasources: efad9cbfdaacad9fdecdff58cc032954
      labels:
        app.kubernetes.io/component: grafana
        app.kubernetes.io/name: grafana
        app.kubernetes.io/part-of: kube-prometheus
        app.kubernetes.io/version: 8.5.5
    spec:
      automountServiceAccountToken: false
      containers:
      - env: []
        image: grafana/grafana:8.5.5
        name: grafana
        ports:
        - containerPort: 3000
          name: http
        readinessProbe:
          httpGet:
            path: /api/health
            port: http
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - mountPath: /var/lib/grafana
          name: grafana-storage
          readOnly: false
        - mountPath: /etc/grafana/provisioning/datasources
          name: grafana-datasources
          readOnly: false
        - mountPath: /etc/grafana/provisioning/dashboards
          name: grafana-dashboards
          readOnly: false
        - mountPath: /tmp
          name: tmp-plugins
          readOnly: false
        - mountPath: /etc/grafana
          name: grafana-config
          readOnly: false
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: grafana
      volumes:
      - emptyDir: {}
        name: grafana-storage
      - name: grafana-datasources
        secret:
          secretName: grafana-datasources
      - configMap:
          name: grafana-dashboards
        name: grafana-dashboards
      - emptyDir:
          medium: Memory
        name: tmp-plugins
      - name: grafana-config
        secret:
          secretName: grafana-config
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grafana
  namespace: monitoring
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: grafana
    weight: 100
  wildcardPolicy: None
